@@ -6,6 +6,7 @@ vX.Y.Z (YYYY-MM-DD)
   reporting
 - Use .svg file for AppImage; remove .png file.
 - Use ARGV0 instead of hard coding name in AppRun
+- Remove Julia version of dbt2-post-process
 
 v0.50.1 (2023-03-03)
 
